--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     
     <footer>
       <div>
-        <p>Copywrite 2020. Camdun Solutions LLC</p>
+        <p>Copyright 2020. Camdun Solutions LLC</p>
       </div>
     </footer>
     
