--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
               <li>Learning and mastering new skills</li>
               <li>Cooking delicious foods! (Trying new recipes is probably my favorite passtime!)</li>
             </ol>
+          </div>
         </article>
       </section>
       
