--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <a href="https://github.com/jaelyndenise?tab=repositories" target="_blank">Github</a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin" target="_blank">LinkedIn</a>
+              <a href="https://www.linkedin.com/in/jaelyn-denise-43128694" target="_blank">LinkedIn</a>
             </li>
           </ul>
         </div>
