Moved contact form to popup window

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
             &#8226;
             <a href="https://www.linkedin.com/in/jaelyn-denise-43128694" target="_blank">LinkedIn</a>
           </div>
-          <button onclick="sendEmail()" style="margin-top: 24px;">Send an Email</button>
+          <button onclick="openPopup()" style="margin-top: 24px;">Send an Email</button>
         </div>
       </section>
     </main>
