--- a/contact.html
+++ b/contact.html
@@ -4,24 +4,13 @@
     <meta charset="UTF-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>My Goals</title>
+    <title>Resume: Jaelyn Denise</title>
     <link href="https://cdnjs.cloudfare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
     <link href="Sriracha-Regular.ttf" rel="stylesheet" type="text/css"/>
     <link href="theme.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <header class="site-header" role="banner">
-        <strong>Where I'm Going</strong>
-        <nav aria-label="Main navigation" style="float:right">
-        <a href="/about.html">About</a>
-        <a href="/resume.html">Resume</a>
-        <a href="/cover-letter.html">Cover Letter</a>
-        <a href="/goals.html">What's Next?</a>
-        </nav>
-    </header>
-
     <main>
-
         <section>
             <h3 style="text-align: center; font-size: 28px">Contact Me</h2>
             <!-- Use this form element for Github-->
@@ -30,8 +19,14 @@
             <!-- Use this form element for school -->
             <form id="contact-form" action="https://wp.zybooks.com/form-viewer.php" method="post" enctype="text/plain">
        
-                <label for="name">Name:</label><br>
+                <label for="first">First Name:</label><br>
                 <input type="text" id="name" name="name" required><br><br>
+
+                <label for="last">Last Name:</label><br>
+                <input type="text" id="last" name="last" required><br><br>
+
+                <label for="company">Company Name:</label><br>
+                <input type="text" id="company" name="company" required><br><br>
 
                 <label for="email">Email:</label><br>
                 <input type="email" id="email" name="email" required><br><br>
