--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Resume: Jaelyn Denise</title>
+    <title>About</title>
     <link href="theme.css" rel="stylesheet" type="text/css" />
   </head>
   
@@ -32,19 +32,36 @@
     
     <main>
 
-      <section style="text-align: center;">
-        <div>
-          <h3>A certified fast learner!</h1>
-          <p>My name is Jaelyn Denise and I am a musician, professional party 
-            planner, teacher and web-developer. I am located in the foggy 
-            mountains of Rimforest, CA, sandwiched right between Lake Gregory 
-            and Lake Arrowhead.</p>
-          <p>I have a degree in commerrcial arranging and scoring with a minor 
-            in computer science, jazz studies and french. I have an extensive 
-            background in education with an emphasis on special needs students
-             and I am looking forward to finding a remote job in the tech 
-             industry so I can travel the world with my family and make lots
-              of cool things!</p>
+      <section>
+        <div  style="display: flex; gap: 24px; padding: 32px; padding: 0 32px;">
+          <div>
+            <h3>A certified fast learner!</h1>
+            <p>My name is Jaelyn Denise and I am a profesional singer, cybersecurity professional,
+              and mother of a 2 year old cane corso named Aero. I am from the foggy 
+              mountains of Crestline, CA, and I spent my childhood wandering the forest.</p>
+            <p>I have a degree in Commercial Arranging and Scoring with a minor 
+              in Computer Science, Jazz Studies and French Language & Culture. I have 
+              an extensive background in education. I'm a licensed educator with an 
+              emphasis in technology, mathematics and students with special needs.
+              </p>
+          
+            <p><b>Some of the things I enjoy outside of technology are:</b></p>
+            <div style="display: flex; gap: 48px;">
+              <ul>
+                <li>Karaoke</li>
+                <li>Reading</li>
+                <li>Nature</li>
+              </ul> 
+              <ul>
+                <li>Painting</li>
+                <li>Learning new languages</li>
+                <li>Trying new recipes!</li>
+              </ul> 
+            </div>
+          </div>
+          <div>
+            <img src="assets/IMG_8381-11_0x14_0-01-A.jpeg" width="400"/>
+          </div>
         </div>
       </section>
 
@@ -63,7 +80,7 @@
             &#8226;
             <a href="https://www.linkedin.com/in/jaelyn-denise-43128694" target="_blank">LinkedIn</a>
           </div>
-          <button onclick="openPopup()" style="margin-top: 24px;">Send an Email</button>
+          <button onclick="window.location.href='mailto:Jaelyn Denise <jaelyn.denise@gmail.com>'" style="margin-top: 24px;">Send an Email</button>
         </div>
       </section>
     </main>
