--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Resume: Jaelyn Denise</title>
+    <title>Contact</title>
     <link href="https://cdnjs.cloudfare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
     <link href="Sriracha-Regular.ttf" rel="stylesheet" type="text/css"/>
     <link href="theme.css" rel="stylesheet" type="text/css" />
