--- a/cover-letter.html
+++ b/cover-letter.html
@@ -30,17 +30,28 @@
     <article aria-labelledby="post-title">
 
       <section id="about" class="resume-section">
-        <h3>Security engineering · Incident response · Customer-centered problem solving</h2>
+        <h3>Security engineering · Software development · Solution-focused problem solving</h2>
         <p>
-          I’m a Compliance Risk Analyst with a strong foundation in security engineering, incident response, and data-driven risk assessment. 
+          I’m a Compliance Risk Analyst with a strong foundation in security engineering, software development, and data-driven risk assessment. 
           My work centers on helping organizations strengthen security posture, align with industry frameworks, and make clear, defensible decisions.
-          I’m especially motivated by teams committed to responsible lending, data security, and operational excellence in financial services.
+          I aim to deliver effective solutions that balance security, usability, business needs, regulatory requirements, user experience, and cost.
+          I accomplish this by integrating systems that work with existing processes and tools, minimizing disruption while maximizing impact.
+          I’m especially motivated by teams committed to innovation, data security, and operational excellence across all industries.
         </p>
 
         <p>
           Recent projects include comprehensive risk assessments using models such as the Carnegie Risk Maturity Model to identify vulnerabilities,
           deliver actionable recommendations, and produce tailored reports for executive and technical stakeholders. I troubleshoot complex issues,
           collaborate across functions to design efficient solutions, and keep customers informed at every step.
+        </p>
+
+        <p>
+         My hands-on experience in full stack software development directly complements my work in cybersecurity engineering and compliance. 
+         Because I can code across the stack, I not only understand how applications are built but can also dive into source code to identify 
+         potential security gaps and recommend secure design patterns. This technical depth enables me to collaborate effectively with developers, 
+         guide teams from initial coding through secure deployments, and integrate compliance requirements seamlessly into the development process. 
+         Paired with my background in risk assessments and the delivery of education and training, I provide end-to-end support that strengthens 
+         security, improves compliance, and empowers teams to build safer systems.
         </p>
 
         <ul class="highlights">
@@ -51,7 +62,7 @@
         </ul>
 
         <p>
-          I’d welcome the opportunity to discuss how my skills align with a Compliance Risk Analyst I role and how I can contribute to your team’s success.
+          I’d welcome the opportunity to discuss how my skills align with this role and how I can contribute to our team’s success.
         </p>
       </section>
     </article>
@@ -99,7 +110,7 @@
             &#8226;
             <a href="https://www.linkedin.com/in/jaelyn-denise-43128694" target="_blank">LinkedIn</a>
           </div>
-          <button onclick="openPopup()" style="margin-top: 24px;">Send an Email</button>
+          <button onclick="window.location.href='mailto:Jaelyn Denise <jaelyn.denise@gmail.com>'" style="margin-top: 24px;">Send an Email</button>
         </div>
       </section>
     <div>
