--- a/goals.html
+++ b/goals.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Resume: Jaelyn Denise</title>
+    <title>What's Next?</title>
     <link href="theme.css" rel="stylesheet" type="text/css" />
   </head>
   
   <body onload="showDateTime()">
     <header class="site-header" role="banner">
-      <strong>What's Next?</strong>
+      <strong>Where I'm Going</strong>
       <nav aria-label="Main navigation" style="float:right">
         <a href="/about.html">About</a>
         <a href="/resume.html">Resume</a>
@@ -24,20 +24,31 @@
     
     <main>
 
+      <section style="text-align: center;">
+       <h3>"I've learned that I still have a lot to learn."</h3>
+       <h3><em>-Maya Angelou</em></h3>
+      </section>
      <section>
         <div>
             <p>My inspiration for my career goals comes from my family, friends, 
-                and mentors who have supported me throughout my journey. They 
+                and the mentors who have supported me throughout my journey. They 
                 have always encouraged me to pursue my passions and strive for 
-                \excellence in everything I do. Additionally, I am inspired by 
+                excellence in everything that I do. Additionally, I am inspired by 
                 the ever-evolving field of technology and the endless possibilities 
                 it offers for innovation and problem-solving.
             </p>
-            <p>Within the next five years, I am to achieve the following:</p>
+            <p>My dream is to live in a world akin to Star Trek: Next Generation. A 
+              world where meritocracy is the norm, and everyone has access to the tools
+              they need to succeed. A world where technology is used to enhance our
+              lives, not control them. A world where we can all work together to solve 
+              the mysteries of the universe and explore new frontiers. I want to be a part of
+              creating that world, and I believe that technology is the key to making it a reality.
+            </p>
+            <p>Within the next five years, I aim to achieve the following:</p>
             <ul>
-                <li>Obtain a position as a software developer at a reputable tech company.</li>
+                <li>Obtain a leadership position at a reputable tech company.</li>
                 <li>Continuously improve my coding skills and stay updated with the latest technologies.</li>
-                <li>Contribute to open-source projects and collaborate with other developers in the community.</li>
+                <li>Contribute to open-source projects and collaborate with other developers in my community.</li>
                 <li>Attend industry conferences and networking events to expand my professional network.</li>
                 <li>Work towards obtaining relevant certifications to enhance my knowledge and credibility in the field.</li>
             </ul>
@@ -65,7 +76,7 @@
             &#8226;
             <a href="https://www.linkedin.com/in/jaelyn-denise-43128694" target="_blank">LinkedIn</a>
           </div>
-          <button onclick="openPopup()" style="margin-top: 24px;">Send an Email</button>
+          <button onclick="window.location.href='mailto:Jaelyn Denise <jaelyn.denise@gmail.com>'" style="margin-top: 24px;">Send an Email</button>
         </div>
       </section>
     </main>
